# vcf2geno

./: ChangeLog  DESCRIPTION  MD5  NAMESPACE  configure  configure.ac  configure.in
R/: vcf2geno.R
inst/doc/: Manual.html
man/: hasIndex.Rd  readVCFToListByGene.Rd  readVCFToListByRange.Rd  readVCFToMatrixByGene.Rd  readVCFToMatrixByRange.Rd  rvmeta.readCov.Rd  rvmeta.readCovByRange.Rd  rvmeta.readData.Rd  rvmeta.readDataByGene.Rd  rvmeta.readDataByRange.Rd  rvmeta.readScoreByRange.Rd  vcf2geno-package.Rd
src/: Exception.h  GeneLoader.cpp  GeneLoader.h  IO.cpp  IO.h  InfoGrepper.h  Makevars  Makevars.in  OrderedMap.h  PatternMatch.h  PeopleSet.h  PlinkInputFile.cpp  PlinkInputFile.h  PlinkOutputFile.cpp  PlinkOutputFile.h  R_CPP_interface.cpp  R_CPP_interface.h  RangeList.cpp  RangeList.h  Regex.h  SimpleMatrix.h  TabixReader.h  TypeConversion.h  Utils.h  VCFBuffer.h  VCFInfo.h  VCFInputFile.cpp  VCFInputFile.h  VCFOutputFile.h  VCFRecord.h  bgzf.c  bgzf.h  blocksort.c  bz_internal_error.c  bzlib.c  bzlib_private.h  compress.c  config.h  config.h.in  decompress.c  (+8 more)
tests/: tests.R
